jEdit 5.5 version history
       (changes since jEdit 5.4.0)
:encoding=UTF-8:

{{{ Version 5.5pre1

Thanks to AdamS, Wim West, M. Cesar R. Lacruz, Egor Abramovich,
Hrotkó Gábor, Alan Ezust, Dale Anson, Roman Tsourick, and Jesse Pavel
for contributing to this release.

{{{ Bug Fixes

- RegisterViewer editable contentPane fixed (Patch #598, Jesse Pavel)

- Command line behavior for +line fixed (Patch #590 - Wim West)

- Autosave Untitled Buffers is now persistent across sessions
  (Feature Request# 501, Patch #596 - Hrotkó Gábor)

- Fixed a number of bugs in the new jEdit printing system (Dale Anson)

- Add missing local properties to Insert_Buffer_Properties macro
  (Patch #599 - Jesse Pavel)

- Fixed an issue with the activity log viewer so that setting the number of
  lines in the log actually works. (Dale Anson)

- Fix for bug #3971, exception trying to set WM_CLASS. (Dale Anson)

- Fix for bug #4047, illegal reflective access operation with Java 9.
  (Dale Anson)

- Fix Bug #4011, The Cut Lines macro gives exception if the cursor is beyond
   text area (Patch #600, Roman Tsourick)

}}}
{{{ UI Improvements

- Show tooltips in ShortcutOptionPane table (FR# 538, Roman Tsourick)

- FSB: Disable first column dragging (Patch# 603, Roman Tsourick)

- FSB: Sorting icon not following header when moving
     (Bug# 4049, Patch# 604, Roman Tsourick)

}}}
{{{ Miscellaneous

- FR #506, FR #536: Autosaves are now saved to the Backup directory.
  Default Backup/Autosave Directory is now $JEDIT_SETTINGS/backups.
  (Alan Ezust, Hrotkó Gábor)

- FR #175: Saving and backup option, "Never Mark Untitled Buffers Dirty" changed
  name and behavior to "Close Dirty Untitled buffers without confirmation"
  (Alan Ezust)

}}}
{{{ API Changes


}}}
{{{ Editing

- Add Gherkin mode (english) to support Cucumber feature files (Matthieu Casanova)

- Patch #593 - Various small patches to modes (AdamS)

- Patch #592 - for groovy mode (Egor Abramovich)
