@@ -5,8 +5,8 @@ jEdit 5.5 version history
 {{{ Version 5.5pre1
 
 Thanks to AdamS, Wim West, M. Cesar R. Lacruz, Egor Abramovich,
-Hrotkó Gábor, Alan Ezust, Dale Anson, Roman Tsourick, and Jesse Pavel
-for contributing to this release.
+Hrotkó Gábor, Alan Ezust, Dale Anson, Roman Tsourick, Rafal Kolanski,
+and Jesse Pavel for contributing to this release.
 
 {{{ Bug Fixes
 
@@ -35,6 +35,8 @@ for contributing to this release.
 
 }}}
 {{{ UI Improvements
+
+- Allow specification of fallback font sizes (Patch #569, Rafal Kolanski)
 
 - Show tooltips in ShortcutOptionPane table (FR# 538, Roman Tsourick)
 
